{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 136,
  "lineage": "17c0b476-c8d8-e4e3-9348-6e32b07c16ee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0302f42a44bf53a45",
            "arn": "arn:aws:ec2:eu-west-3:682390094476:instance/i-0556219cbb310997f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0556219cbb310997f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awskey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bdda438fd1da887a",
            "private_dns": "ip-192-168-1-93.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.93",
            "public_ip": "13.37.252.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ffb9ef6e74795d29",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0f4f7d21dc5185a70"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce99f4875c99bc2d",
            "tags": {
              "Name": "sulaiman-control-node",
              "Type": "control-node"
            },
            "tags_all": {
              "Name": "sulaiman-control-node",
              "Type": "control-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f4f7d21dc5185a70"
            ]
          },
          "dependencies": [
            "aws_key_pair.myawskey",
            "aws_security_group.sulaiman_sg",
            "aws_subnet.sulaiman_subnet",
            "aws_vpc.sulaiman_vpc",
            "tls_private_key.mypem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "managed_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0302f42a44bf53a45",
            "arn": "arn:aws:ec2:eu-west-3:682390094476:instance/i-06f40e0e7a870fbe4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06f40e0e7a870fbe4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awskey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f0dc6fe0f4baef31",
            "private_dns": "ip-192-168-1-242.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.242",
            "public_ip": "13.36.239.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02291ec45eae2b0da",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0f4f7d21dc5185a70"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce99f4875c99bc2d",
            "tags": {
              "Name": "sulaiman-managed-node-1",
              "Type": "managed-node"
            },
            "tags_all": {
              "Name": "sulaiman-managed-node-1",
              "Type": "managed-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f4f7d21dc5185a70"
            ]
          },
          "dependencies": [
            "aws_key_pair.myawskey",
            "aws_security_group.sulaiman_sg",
            "aws_subnet.sulaiman_subnet",
            "aws_vpc.sulaiman_vpc",
            "tls_private_key.mypem"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0302f42a44bf53a45",
            "arn": "arn:aws:ec2:eu-west-3:682390094476:instance/i-011faa495404c5c34",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-011faa495404c5c34",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awskey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0360474079818202b",
            "private_dns": "ip-192-168-1-151.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.151",
            "public_ip": "35.180.201.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-003581a7eed3f7162",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0f4f7d21dc5185a70"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce99f4875c99bc2d",
            "tags": {
              "Name": "sulaiman-managed-node-2",
              "Type": "managed-node"
            },
            "tags_all": {
              "Name": "sulaiman-managed-node-2",
              "Type": "managed-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f4f7d21dc5185a70"
            ]
          },
          "dependencies": [
            "aws_key_pair.myawskey",
            "aws_security_group.sulaiman_sg",
            "aws_subnet.sulaiman_subnet",
            "aws_vpc.sulaiman_vpc",
            "tls_private_key.mypem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sulaiman_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:682390094476:internet-gateway/igw-05ac0035c6aa73813",
            "id": "igw-05ac0035c6aa73813",
            "owner_id": "682390094476",
            "tags": {
              "Name": "sulaiman_igw"
            },
            "tags_all": {
              "Name": "sulaiman_igw"
            },
            "vpc_id": "vpc-0172f3e281d6ef6d8"
          },
          "dependencies": [
            "aws_vpc.sulaiman_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "sulaiman_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05ac0035c6aa73813",
            "id": "r-rtb-095d1ae3266d0adee1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-095d1ae3266d0adee",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sulaiman_igw",
            "aws_route_table.sulaiman_route_table",
            "aws_vpc.sulaiman_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sulaiman_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:682390094476:route-table/rtb-095d1ae3266d0adee",
            "id": "rtb-095d1ae3266d0adee",
            "owner_id": "682390094476",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05ac0035c6aa73813",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sulaiman_route_table"
            },
            "tags_all": {
              "Name": "sulaiman_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0172f3e281d6ef6d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sulaiman_igw",
            "aws_vpc.sulaiman_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sulaiman_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:682390094476:security-group/sg-0f4f7d21dc5185a70",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f4f7d21dc5185a70",
            "ingress": [],
            "name": "sulaiman_ssh",
            "name_prefix": "",
            "owner_id": "682390094476",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sulaiman_ssh_security_group"
            },
            "tags_all": {
              "Name": "sulaiman_ssh_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0172f3e281d6ef6d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sulaiman_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH access",
            "from_port": 22,
            "id": "sgrule-4251326905",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f4f7d21dc5185a70",
            "security_group_rule_id": "sgr-0149859dabb2a9b36",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sulaiman_sg",
            "aws_vpc.sulaiman_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sulaiman_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:682390094476:subnet/subnet-0ce99f4875c99bc2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce99f4875c99bc2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "682390094476",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0172f3e281d6ef6d8"
          },
          "dependencies": [
            "aws_vpc.sulaiman_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sulaiman_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:682390094476:vpc/vpc-0172f3e281d6ef6d8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-064577ab7dfd56f72",
            "default_route_table_id": "rtb-030e7af68523ea145",
            "default_security_group_id": "sg-093db109428ba5bcb",
            "dhcp_options_id": "dopt-013af424c023c78d3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0172f3e281d6ef6d8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-030e7af68523ea145",
            "owner_id": "682390094476",
            "tags": {
              "Name": "sulaiman_vpc"
            },
            "tags_all": {
              "Name": "sulaiman_vpc"
            }
          }
        }
      ]
    }
  ]
}